SAPA-526 Add --catalog_path option to script

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,9 @@
+Release 0.90
+
+NEW:
+Support for local schema files and catalogs in XML validation. New option --catalog_path
+is added to check-sip-digital-objects script to support this.
+
 Release 0.35
 
 NEW:
